[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mvmodbus2"
version = "1.0.0"
authors = [
  { name="Marco Vaccari", email="marcov@marcov.it" },
]
description = "A MODBUS compliant python library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Manufacturing",
]

[project.urls]
Homepage = "https://github.com/ghiaia/mvmodbus2"
Issues = "https://github.com/ghiaia/mvmodbus2/issues"